<resources>
    <string name="app_name">UrbanFarm</string>
    <string name="client_id">974159505306-083bq5599np49h34tccu1j1nqi1vl1sf.apps.googleusercontent.com</string>
    <string name="onboarding_page1_title">Selamat datang di UrbanFarm</string>
    <string name="onboarding_page1_content">Hadir dengan panduan lengkap bercocok tanam. Temukan detail alat dan bahan yang dibutuhkan dan akses langsung ke platform marketplace.</string>
    <string name="onboarding_page2_title">Pantau dan rawat tanaman dengan mudah!</string>
    <string name="onboarding_page2_content">Pantau tanaman secara real-time, dapatkan pengingat perawatan otomatis, dan pastikan hasil panen optimal.</string>
    <string name="onboarding_page3_title">Jual hasil panen dan dapatkan keuntungan</string>
    <string name="onboarding_page3_content">Jual hasil panen Anda dan nikmati kemudahan berinteraksi sesama pengguna di Urban Farming! Selamat menanam dan berbagi hasil panen!</string>
    <string name="landing_page_welcome">Ayo Mulai #UrbanFarming bersama UrbanFarm!</string>
    <string name="landing_page_copyright">Copyright 2023 CodeSmiths Team</string>
    <string name="home_title_tanamanlist">Mau Tanam Apa hari ini?</string>
    <string name="home_ic_icon1">Bawang Merah</string>
    <string name="home_ic_icon2">Cabai Rawit</string>
    <string name="home_ic_icon3">Buncis</string>
    <string name="home_ic_icon4">Wortel</string>
    <string name="home_ic_icon5">Kembang Kol</string>
    <string name="home_ic_icon6">Tomat</string>
    <string name="home_ic_icon7">Kacang Panjang</string>
    <string name="home_ic_icon8">Timun</string>
    <string name="detail_tanaman_page_topappbar_title">Mulai Menanam</string>
    <string name="detail_tanaman_page_detail_subtitle_1">Jenis Tanaman : </string>
    <string name="detail_tanaman_page_detail_subtitle_2">Teknik Menanam : </string>
    <string name="detail_tanaman_page_detail_subtitle_3">Tingkat Kesulitan : </string>
    <string name="detail_tanaman_page_detail_subheader_1">Deskripsi Tanaman</string>
    <string name="btn_mulai_menanam_text">Ayo Tanam</string>
    <string name="tanamanku_page_title">Tanamanku</string>
    <string name="tanamanku_tambah_page_title_placeholder">Tambah Tanaman</string>
    <string name="tanamanku_fab_string_add">Tambah Tanaman Anda</string>
    <string name="tanamanku_card_title_placeholder">Nama Tanaman</string>
    <string name="tanamanku_card_timestamp_placeholder">Ditanam 4 Desember 2023</string>
    <string name="tambah_tanamanku_nama_tanaman_hint">Nama Tanaman</string>
    <string name="tambah_tanamanku_jenis_tanaman_hint">Pilih Jenis Tanaman...</string>
    <string name="tambah_tanamanku_metode_tanam_hint">Pilih Metode Tanam...</string>
    <string-array name="jenis_tanaman">
        <item>Bawang Merah</item>
        <item>Cabai Rawit</item>
        <item>Buncis</item>
        <item>Wortel</item>
        <item>Kembang Kol</item>
        <item>Tomat</item>
        <item>Kacang Panjang</item>
        <item>Timun</item>
    </string-array>
    <string-array name="metode_tanam">
        <item>Polybag</item>
        <item>Hidroponik</item>
    </string-array>
    <string-array name="list_kota">
        <item>Aceh</item>
        <item>Badung</item>
        <item>Bandar Lampung</item>
        <item>Bandung</item>
        <item>Banjarmasin</item>
        <item>Batam</item>
        <item>Bekasi</item>
        <item>Binjai</item>
        <item>Blitar</item>
        <item>Bogor</item>
        <item>Cilegon</item>
        <item>Cimahi</item>
        <item>Cirebon</item>
        <item>Denpasar</item>
        <item>Depok</item>
        <item>Dumai</item>
        <item>Gorontalo</item>
        <item>Jakarta</item>
        <item>Jambi</item>
        <item>Jayapura</item>
        <item>Kediri</item>
        <item>Kendari</item>
        <item>Kupang</item>
        <item>Lhokseumawe</item>
        <item>Madiun</item>
        <item>Magelang</item>
        <item>Makassar</item>
        <item>Malang</item>
        <item>Manado</item>
        <item>Mataram</item>
        <item>Medan</item>
        <item>Padang</item>
        <item>Palangkaraya</item>
        <item>Palembang</item>
        <item>Palu</item>
        <item>Pangkal Pinang</item>
        <item>Parepare</item>
        <item>Pekalongan</item>
        <item>Pekanbaru</item>
        <item>Pematangsiantar</item>
        <item>Pontianak</item>
        <item>Probolinggo</item>
        <item>Salatiga</item>
        <item>Samarinda</item>
        <item>Semarang</item>
        <item>Serang</item>
        <item>Sibolga</item>
        <item>Singkawang</item>
        <item>Sofifi</item>
        <item>Sorong</item>
        <item>Sukabumi</item>
        <item>Surabaya</item>
        <item>Tangerang</item>
        <item>Tanjung Pinang</item>
        <item>Tarakan</item>
        <item>Tasikmalaya</item>
        <item>Tebingtinggi</item>
        <item>Tegal</item>
        <item>Ternate</item>
        <item>Tomohon</item>
        <item>Tual</item>
        <item>Yogyakarta</item>
    </string-array>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan. Sed libero enim sed faucibus turpis. Integer malesuada nunc vel risus commodo viverra maecenas. Nibh mauris cursus mattis molestie. Facilisi etiam dignissim diam quis enim lobortis. Montes nascetur ridiculus mus mauris vitae ultricies leo integer. Ornare massa eget egestas purus viverra accumsan in. Etiam sit amet nisl purus in mollis nunc sed id. Elit eget gravida cum sociis natoque. Feugiat in ante metus dictum at. Sit amet risus nullam eget felis eget nunc lobortis. Ante in nibh mauris cursus mattis molestie a. Id porta nibh venenatis cras sed felis eget velit. Risus viverra adipiscing at in tellus integer feugiat. Venenatis lectus magna fringilla urna porttitor. Nunc congue nisi vitae suscipit tellus mauris a diam maecenas. Malesuada fames ac turpis egestas.
        Lorem donec massa sapien faucibus et molestie ac. Euismod elementum nisi quis eleifend quam adipiscing vitae proin. Nunc sed velit dignissim sodales ut eu sem integer vitae. Vel facilisis volutpat est velit egestas dui id. Egestas integer eget aliquet nibh praesent. Purus semper eget duis at tellus at. Scelerisque varius morbi enim nunc faucibus. Mi eget mauris pharetra et ultrices. Pretium lectus quam id leo in. Ipsum suspendisse ultrices gravida dictum fusce ut. Lobortis scelerisque fermentum dui faucibus. Quam elementum pulvinar etiam non quam lacus. Id diam vel quam elementum pulvinar. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Aliquam malesuada bibendum arcu vitae elementum curabitur. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Ac tincidunt vitae semper quis lectus nulla at volutpat diam. Posuere ac ut consequat semper viverra nam libero justo laoreet.
        Orci nulla pellentesque dignissim enim sit amet venenatis urna. Id cursus metus aliquam eleifend mi in nulla posuere. Id cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Odio aenean sed adipiscing diam. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Consectetur adipiscing elit ut aliquam purus. Sit amet mauris commodo quis imperdiet massa tincidunt. Egestas congue quisque egestas diam in. Senectus et netus et malesuada. Ullamcorper sit amet risus nullam eget. Est placerat in egestas erat imperdiet. Commodo nulla facilisi nullam vehicula ipsum a. Erat velit scelerisque in dictum non. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.
        Cras fermentum odio eu feugiat pretium nibh. Ac odio tempor orci dapibus ultrices in iaculis nunc sed. Convallis tellus id interdum velit laoreet id donec ultrices tincidunt. Mauris a diam maecenas sed. Id cursus metus aliquam eleifend mi in nulla posuere. Imperdiet nulla malesuada pellentesque elit eget gravida cum. Vitae turpis massa sed elementum. Eu lobortis elementum nibh tellus molestie nunc non. Erat velit scelerisque in dictum non consectetur a erat nam. Convallis tellus id interdum velit laoreet id donec. Eu facilisis sed odio morbi quis commodo odio aenean sed. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Purus in mollis nunc sed id.
        Convallis tellus id interdum velit laoreet id donec. Nunc id cursus metus aliquam eleifend mi in nulla posuere. Scelerisque mauris pellentesque pulvinar pellentesque habitant. Mattis enim ut tellus elementum sagittis vitae et leo. Tincidunt vitae semper quis lectus nulla at volutpat diam ut. Erat velit scelerisque in dictum non consectetur. Ac turpis egestas integer eget aliquet nibh praesent tristique magna. Placerat in egestas erat imperdiet. A cras semper auctor neque vitae tempus quam pellentesque nec. Lectus quam id leo in vitae turpis. Felis imperdiet proin fermentum leo. Quis commodo odio aenean sed. Euismod in pellentesque massa placerat duis ultricies lacus sed. Nisl purus in mollis nunc sed. Lectus vestibulum mattis ullamcorper velit. Massa tempor nec feugiat nisl pretium fusce id. At imperdiet dui accumsan sit amet nulla. Lacus laoreet non curabitur gravida arcu ac tortor. Varius quam quisque id diam vel quam elementum pulvinar</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan. Sed libero enim sed faucibus turpis. Integer malesuada nunc vel risus commodo viverra maecenas. Nibh mauris cursus mattis molestie. Facilisi etiam dignissim diam quis enim lobortis. Montes nascetur ridiculus mus mauris vitae ultricies leo integer. Ornare massa eget egestas purus viverra accumsan in. Etiam sit amet nisl purus in mollis nunc sed id. Elit eget gravida cum sociis natoque. Risus viverra adipiscing at in tellus integer feugiat. Venenatis lectus magna fringilla urna porttitor.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_tanamanku_placeholder1">Anda memiliki 0 tanaman</string>
    <string name="card_tanamanku_placeholder2">Kontrol rutin tanaman yang anda tanam melalui fitur TanamanKu</string>
    <string name="detail_tanaman_page_title_placeholder">Bawang Merah</string>
    <string name="jenis_tanaman_placeholder">Sayur</string>
    <string name="teknik_menanam_placeholder">Hidroponik dan Polybag</string>
    <string name="tingkat_kesulitan_placeholder">Mudah</string>
    <string name="deskripsi_bawang_merah">Bawang merah umum menjadi bumbu masak penguat rasa. Namun, di balik kegunaannya untuk masakan, umbi-umbian ini juga bisa bermanfaat untuk merawat kesehatan tubuh.
Kandungan anthocyanin pada bumbu dapur ini dapat bekerja melindungi tubuh dari penyakit jantung, beberapa jenis kanker, dan penyakit gula.
Selain anthocyanin, sayuran ini juga mengandung berbagai vitamin, mineral, dan senyawa yang telah terbukti meningkatkan kesehatan dalam banyak hal.</string>
    <string name="deskripsi_cabai_merah">Cabai rawit merupakan salah satu jenis cabai favorit di Indonesia. Bahkan cabai rawit merah sangat digemari karena rasanya yang sangat pedas.
Cabai rawit sangat mudah ditanam di rumah. Cabai rawit juga dapat tumbuh dengan baik di dataran rendah sampai dataran tinggi. Hampir semua jenis tanah cocok ditanami cabai. Namun yang paling baik adalah tanah humus yang kaya akan unsur hara.</string>
    <string name="bawangmerah_polybag_mediatanam_step2">Masukkan media tanam ke dalam polybag. Media tanam yang digunakan adalah campuran tanah, sekam, pupuk kandang, dan arang kayu dengan perbandingan 2:1:1:1.</string>
    <string name="bawangmerah_polybag_mediatanam_step1">Siapkan Polybag ukurang 25 cm (Lihat Gambar)</string>
</resources>