<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.beranda.DetailTanamanPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:liftOnScroll="true"
        style="@style/Widget.App.Toolbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/TopAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/detail_tanaman_page_topappbar_title"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_bg_half_detail_tanaman_page"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_dark_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/iv_detail_tanaman_page"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_card_detail_tanaman_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder_detail_tanaman" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_title_detail_tanaman_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/detail_tanaman_page_title_placeholder"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textAlignment="textStart"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_tanaman_page"/>

            <TextView
                android:id="@+id/tv_subtitle_detail_1_detail_tanaman_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/detail_tanaman_page_detail_subtitle_1"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail_tanaman_page"/>

            <TextView
                android:id="@+id/tv_subtitle_detail_2_detail_tanaman_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/detail_tanaman_page_detail_subtitle_2"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_detail_1_detail_tanaman_page"/>

            <TextView
                android:id="@+id/tv_subtitle_detail_3_detail_tanaman_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/detail_tanaman_page_detail_subtitle_3"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_detail_2_detail_tanaman_page"/>

            <TextView
                android:id="@+id/tv_header_deskripsi_detail_tanaman_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/detail_tanaman_page_detail_subheader_1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_detail_3_detail_tanaman_page"/>

            <TextView
                android:id="@+id/tv_description_detail_tanaman_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_deskripsi_detail_tanaman_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

