<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dark"
    tools:context=".activity.tanamanku.AddEditTanamankuItemActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar_tambah_tanamanku"
        style="@style/Toolbar.Tambah.Tanaman.Tanamanku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/tanamanku_tambah_page_title_placeholder"
        app:titleTextColor="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_tambah_tanamanku"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/ShapeAppearance.CustomCardTambahTanamankuPage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_nama_tanaman_tambah_tanamanku_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tambah_tanamanku_nama_tanaman_hint"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_tanaman_tanamanku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_jenis_tanaman_tambah_tanamanku_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/tambah_tanamanku_jenis_tanaman_hint"
                app:layout_constraintTop_toBottomOf="@id/et_nama_tanaman_tambah_tanamanku_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_jenis_tanaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_metode_tanam_tambah_tanamanku_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/tambah_tanamanku_metode_tanam_hint"
                app:layout_constraintTop_toBottomOf="@id/dropdown_jenis_tanaman_tambah_tanamanku_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_metode_tanam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_tambah_tanamanku_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/tertiary_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:src="@drawable/ic_save"/>


</androidx.constraintlayout.widget.ConstraintLayout>